--- a/hiworth_construction/views/goods_tranfer_note.xml
+++ b/hiworth_construction/views/goods_tranfer_note.xml
@@ -131,7 +131,7 @@
 
 
 		<menuitem id="menu_goods_transfer_note"
-				  parent="hiworth_construction.material_transfer_menu_id"
+				  parent="material_transfer_menu_id"
 				  name="Site to Site"
 				  sequence="2"
 				  action="action_goods_transfer_note"
