--- a/hiworth_construction/views/material_issue_slip_views.xml
+++ b/hiworth_construction/views/material_issue_slip_views.xml
@@ -221,7 +221,7 @@
         <menuitem id="material_transfer_menu_id" name="Material Transfers" parent="stock.menu_stock_root"
                   sequence="1"/>
 
-		<menuitem id="menu_material_issue_slip_receive" parent="hiworth_construction.material_transfer_menu_id"
+		<menuitem id="menu_material_issue_slip_receive" parent="material_transfer_menu_id"
 				  name="Site To Store" sequence="3"
 				  action = "hiworth_construction.action_material_issue_slip_receiver"
 				   />
