--- a/hiworth_construction/views/material_issue_slip_views.xml
+++ b/hiworth_construction/views/material_issue_slip_views.xml
@@ -112,7 +112,7 @@
 			<field name="context">{'form_view_ref':'hiworth_construction.view_material_issue_slip_form','readonly_by_pass': True}</field>
 		</record>
 
-		<menuitem id="menu_material_issue_slip" parent="hiworth_construction.material_transfer_menu_id"
+		<menuitem id="menu_material_issue_slip" parent="material_transfer_menu_id"
 				  name="Store To Site" sequence="3"
 				  action="action_material_issue_slip"
 				   />
