--- a/hiworth_construction/views/site_purchase.xml
+++ b/hiworth_construction/views/site_purchase.xml
@@ -62,7 +62,7 @@
                                   <field name="brand_name" string="Brand"/>
                                     <field name="desc" required="1" />
                                 <field name="unit" required="1" />
-                                <field name="quantity" widget="char" required="1" sum="Total" />
+                                <field name="quantity" sum="Total" />
                                <field name="project_approved_qty" readonly="1" invisible="1"/>
                                   <field name="processed_qty" readonly="1" invisible="1"/>
                               </tree>
@@ -1184,13 +1184,15 @@ Orders will only be merged if: &#10;
 
 							   <tree editable="bottom" delete="false" create="false">
                                   <field name="item_id" readonly="1" required="1" />
-                                  <field name="brand_name" readonly="1" string="Brand"/>
+                                  <field name="brand_name" string="Brand" force_save="1" invisible="1"/>
+<!--                                  <field name="brand_name1" string="Brand"/>-->
+<!--                                    <field name="brand_desc" required="1" />-->
                                     <field name="desc" required="1" />
                                 <field name="unit_id" readonly="1" required="1" />
                                    <field name="tax_ids" readonly="1" widget='many2many_tags'/>
-                                <field name="po_quantity" readonly="1" widget="char" required="1" sum="Total" />
+                                <field name="po_quantity" readonly="1" sum="Total" />
 
-                                   <field name="quantity_accept"  widget="char" required="1" sum="Total"/>
+                                   <field name="quantity_accept" sum="Total"/>
 
                                      <field name="rate" widget="char" required="1" />
 
